--- a/S5.html
+++ b/S5.html
@@ -172,15 +172,15 @@
             <a href="ics/donaer-nicolas.ics" class="employee">DONAER Nicolas</a>
             <div class="employee repos">DOVINA Théo <span class="badge">Repos</span></div>
             <div class="employee repos">HEBERT Jean Baptiste <span class="badge">Repos</span></div>
-            <div class="employee repos">JARGUEL Thomas <span class="badge">Repos</span></div>
+            <a href="ics/jarguel-thomas.ics" class="employee">JARGUEL Thomas</a>
             <div class="employee repos">KABUNDA NDEKE Marvyn <span class="badge">Repos</span></div>
             <a href="ics/madiele-henri.ics" class="employee">MADIELE Henri</a>
             <div class="employee repos">MOSTEFA Yanis <span class="badge">Repos</span></div>
             <a href="ics/perez-loic.ics" class="employee">PEREZ Loic</a>
-            <div class="employee repos">PISTORE Remi <span class="badge">Repos</span></div>
+            <a href="ics/pistore-remi.ics" class="employee">PISTORE Remi</a>
             <a href="ics/pujol-mathieu.ics" class="employee">PUJOL Mathieu</a>
-            <div class="employee repos">RABII Mehdi <span class="badge">Repos</span></div>
-            <div class="employee repos">SEIGNE Kevin <span class="badge">Repos</span></div>
+            <a href="ics/rabii-mehdi.ics" class="employee">RABII Mehdi</a>
+            <a href="ics/seigne-kevin.ics" class="employee">SEIGNE Kevin</a>
             <a href="ics/tinguy-florian.ics" class="employee">TINGUY Florian</a>
             <a href="ics/toppan-mattis.ics" class="employee">TOPPAN Mattis</a>
         </div>
