--- a/S5.html
+++ b/S5.html
@@ -162,27 +162,27 @@
         
         <div class="employees">
             <div class="employee repos">BONILLO Matthieu <span class="badge">Repos</span></div>
-            <a href="ics/boulardet-lucas.ics" class="employee">BOULARDET Lucas</a>
-            <a href="ics/carrere-peio.ics" class="employee">CARRERE Peïo</a>
-            <div class="employee repos">CASTELLON Pascaline <span class="badge">Repos</span></div>
+            <div class="employee repos">BOULARDET Lucas <span class="badge">Repos</span></div>
+            <div class="employee repos">CARRERE Peïo <span class="badge">Repos</span></div>
+            <a href="ics/castellon-pascaline.ics" class="employee">CASTELLON Pascaline</a>
             <div class="employee repos">COHAT Linda <span class="badge">Repos</span></div>
             <a href="ics/cruzel-quentin.ics" class="employee">CRUZEL Quentin</a>
             <a href="ics/de-nouel-maxime.ics" class="employee">DE NOUEL Maxime</a>
-            <div class="employee repos">DIVIEN Yohan <span class="badge">Repos</span></div>
+            <a href="ics/divien-yohan.ics" class="employee">DIVIEN Yohan</a>
             <a href="ics/donaer-nicolas.ics" class="employee">DONAER Nicolas</a>
             <div class="employee repos">DOVINA Théo <span class="badge">Repos</span></div>
             <div class="employee repos">HEBERT Jean Baptiste <span class="badge">Repos</span></div>
-            <a href="ics/jarguel-thomas.ics" class="employee">JARGUEL Thomas</a>
+            <div class="employee repos">JARGUEL Thomas <span class="badge">Repos</span></div>
             <div class="employee repos">KABUNDA NDEKE Marvyn <span class="badge">Repos</span></div>
             <a href="ics/madiele-henri.ics" class="employee">MADIELE Henri</a>
             <div class="employee repos">MOSTEFA Yanis <span class="badge">Repos</span></div>
             <a href="ics/perez-loic.ics" class="employee">PEREZ Loic</a>
-            <a href="ics/pistore-remi.ics" class="employee">PISTORE Remi</a>
+            <div class="employee repos">PISTORE Remi <span class="badge">Repos</span></div>
             <a href="ics/pujol-mathieu.ics" class="employee">PUJOL Mathieu</a>
-            <a href="ics/rabii-mehdi.ics" class="employee">RABII Mehdi</a>
-            <a href="ics/seigne-kevin.ics" class="employee">SEIGNE Kevin</a>
+            <div class="employee repos">RABII Mehdi <span class="badge">Repos</span></div>
+            <div class="employee repos">SEIGNE Kevin <span class="badge">Repos</span></div>
             <a href="ics/tinguy-florian.ics" class="employee">TINGUY Florian</a>
-            <a href="ics/toppan-mattis.ics" class="employee">TOPPAN Mattis</a>
+            <div class="employee repos">TOPPAN Mattis <span class="badge">Repos</span></div>
         </div>
         
         <div class="footer">
