Mise à jour planning S5

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <a href="ics/carrere-peio.ics" class="employee">CARRERE Peïo</a>
             <div class="employee repos">CASTELLON Pascaline <span class="badge">Repos</span></div>
             <a href="ics/cohat-linda.ics" class="employee">COHAT Linda</a>
-            <a href="ics/cruzel-quentin.ics" class="employee">CRUZEL Quentin</a>
+            <div class="employee repos">CRUZEL Quentin <span class="badge">Repos</span></div>
             <a href="ics/de-nouel-maxime.ics" class="employee">DE NOUEL Maxime</a>
-            <a href="ics/divien-yohan.ics" class="employee">DIVIEN Yohan</a>
+            <div class="employee repos">DIVIEN Yohan <span class="badge">Repos</span></div>
             <a href="ics/donaer-nicolas.ics" class="employee">DONAER Nicolas</a>
             <div class="employee repos">DOVINA Théo <span class="badge">Repos</span></div>
             <div class="employee repos">HEBERT Jean Baptiste <span class="badge">Repos</span></div>
@@ -103,7 +103,7 @@
             <div class="employee repos">RABII Mehdi <span class="badge">Repos</span></div>
             <div class="employee repos">SEIGNE Kevin <span class="badge">Repos</span></div>
             <a href="ics/tinguy-florian.ics" class="employee">TINGUY Florian</a>
-            <a href="ics/toppan-mattis.ics" class="employee">TOPPAN Mattis</a>
+            <div class="employee repos">TOPPAN Mattis <span class="badge">Repos</span></div>
         </div>
         <div class="footer">
             <p>Cliquez sur votre nom pour ajouter le planning à votre calendrier</p>
