Mise à jour planning S3

--- a/S3.html
+++ b/S3.html
@@ -48,18 +48,18 @@
             <div class="employee repos">COHAT Linda <span class="badge">Repos</span></div>
             <div class="employee repos">CRUZEL Quentin <span class="badge">Repos</span></div>
             <a href="ics/de-nouel-maxime.ics" class="employee">DE NOUEL Maxime</a>
-            <div class="employee repos">DIVIEN Yohan <span class="badge">Repos</span></div>
+            <a href="ics/divien-yohan.ics" class="employee">DIVIEN Yohan</a>
             <div class="employee repos">DONAER Nicolas <span class="badge">Repos</span></div>
             <div class="employee repos">DOVINA Théo <span class="badge">Repos</span></div>
-            <a href="ics/hebert-jean-baptiste.ics" class="employee">HEBERT Jean Baptiste</a>
+            <div class="employee repos">HEBERT Jean Baptiste <span class="badge">Repos</span></div>
             <div class="employee repos">JARGUEL Thomas <span class="badge">Repos</span></div>
             <div class="employee repos">KABUNDA NDEKE Marvyn <span class="badge">Repos</span></div>
             <div class="employee repos">MADIELE Henri <span class="badge">Repos</span></div>
             <div class="employee repos">MOSTEFA Yanis <span class="badge">Repos</span></div>
-            <a href="ics/perez-loic.ics" class="employee">PEREZ Loic</a>
-            <div class="employee repos">PISTORE Remi <span class="badge">Repos</span></div>
+            <div class="employee repos">PEREZ Loic <span class="badge">Repos</span></div>
+            <a href="ics/pistore-remi.ics" class="employee">PISTORE Remi</a>
             <a href="ics/pujol-mathieu.ics" class="employee">PUJOL Mathieu</a>
-            <a href="ics/rabii-mehdi.ics" class="employee">RABII Mehdi</a>
+            <div class="employee repos">RABII Mehdi <span class="badge">Repos</span></div>
             <div class="employee repos">SEIGNE Kevin <span class="badge">Repos</span></div>
             <div class="employee repos">TINGUY Florian <span class="badge">Repos</span></div>
             <div class="employee repos">TOPPAN Mattis <span class="badge">Repos</span></div>
