--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planning Urban 7D - S3</title>
+    <title>Planning Urban 7D - S6</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -33,36 +33,37 @@
         <div class="header">
             <div class="logo">⚽</div>
             <h1>Planning Urban 7D</h1>
-            <p class="subtitle">Semaine 3</p>
-            <div class="dates">12 Janvier → 18 Janvier</div>
+            <p class="subtitle">Semaine 6</p>
+            <div class="dates">2 Février → 8 Février</div>
         </div>
         <div class="week-selector">
-            <a href="#" class="week-tab active">S3</a>
+            <a href="S3.html" class="week-tab ">S3</a>
             <a href="S5.html" class="week-tab ">S5</a>
+            <a href="#" class="week-tab active">S6</a>
         </div>
         <div class="employees">
-            <div class="employee repos">BONILLO Matthieu <span class="badge">Repos</span></div>
+            <a href="ics/bonillo-matthieu.ics" class="employee">BONILLO Matthieu</a>
             <div class="employee repos">BOULARDET Lucas <span class="badge">Repos</span></div>
             <a href="ics/carrere-peio.ics" class="employee">CARRERE Peïo</a>
             <div class="employee repos">CASTELLON Pascaline <span class="badge">Repos</span></div>
             <div class="employee repos">COHAT Linda <span class="badge">Repos</span></div>
-            <div class="employee repos">CRUZEL Quentin <span class="badge">Repos</span></div>
+            <a href="ics/cruzel-quentin.ics" class="employee">CRUZEL Quentin</a>
             <a href="ics/de-nouel-maxime.ics" class="employee">DE NOUEL Maxime</a>
             <a href="ics/divien-yohan.ics" class="employee">DIVIEN Yohan</a>
-            <div class="employee repos">DONAER Nicolas <span class="badge">Repos</span></div>
-            <div class="employee repos">DOVINA Théo <span class="badge">Repos</span></div>
+            <a href="ics/donaer-nicolas.ics" class="employee">DONAER Nicolas</a>
+            <a href="ics/dovina-theo.ics" class="employee">DOVINA Théo</a>
             <div class="employee repos">HEBERT Jean Baptiste <span class="badge">Repos</span></div>
             <div class="employee repos">JARGUEL Thomas <span class="badge">Repos</span></div>
             <div class="employee repos">KABUNDA NDEKE Marvyn <span class="badge">Repos</span></div>
-            <div class="employee repos">MADIELE Henri <span class="badge">Repos</span></div>
-            <div class="employee repos">MOSTEFA Yanis <span class="badge">Repos</span></div>
-            <div class="employee repos">PEREZ Loic <span class="badge">Repos</span></div>
+            <a href="ics/madiele-henri.ics" class="employee">MADIELE Henri</a>
+            <a href="ics/mostefa-yanis.ics" class="employee">MOSTEFA Yanis</a>
+            <a href="ics/perez-loic.ics" class="employee">PEREZ Loic</a>
             <a href="ics/pistore-remi.ics" class="employee">PISTORE Remi</a>
             <a href="ics/pujol-mathieu.ics" class="employee">PUJOL Mathieu</a>
-            <div class="employee repos">RABII Mehdi <span class="badge">Repos</span></div>
-            <div class="employee repos">SEIGNE Kevin <span class="badge">Repos</span></div>
-            <div class="employee repos">TINGUY Florian <span class="badge">Repos</span></div>
-            <div class="employee repos">TOPPAN Mattis <span class="badge">Repos</span></div>
+            <a href="ics/rabii-mehdi.ics" class="employee">RABII Mehdi</a>
+            <a href="ics/seigne-kevin.ics" class="employee">SEIGNE Kevin</a>
+            <a href="ics/tinguy-florian.ics" class="employee">TINGUY Florian</a>
+            <a href="ics/toppan-mattis.ics" class="employee">TOPPAN Mattis</a>
         </div>
         <div class="footer"><p>Cliquez sur votre nom pour ajouter le planning à votre calendrier</p></div>
     </div>
